--- a/MyProjects/MAUI/Cricri371.Time.Manager/Cricri371.Time.Manager/Cricri371.Time.Manager.csproj
+++ b/MyProjects/MAUI/Cricri371.Time.Manager/Cricri371.Time.Manager/Cricri371.Time.Manager.csproj
@@ -56,4 +56,10 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.8" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Remove="Model\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Model\" />
+	</ItemGroup>
 </Project>
